--- a/style.css
+++ b/style.css
@@ -67,12 +67,14 @@ button{
 }
 
 button:hover{
-    background-color: #ef9652;
+    background-color: transparent;
+    border:2px black;
+    color:white;
 
 }
 
 .cta2:hover{
-    
+
     background-color: black;
 
 }
